Skrevet bit om tilbakeblikk

--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -269,11 +269,37 @@ ref // (1) Handbok for gruppearbeidet\\
 \section{Tilbakeblikk}
 \label{sec:tilbakeblikk}
 
-Når vi ser bakover er det lett å se at gruppen har gjennomgått trinnene i
-Tuckmanns \cite{tuckman} modell for gruppeutvikling. 
+Når vi ser tilbake kan det påstås at gruppa gjennomgikk de fire trinnene i
+Tuckmans \cite{tuckman} teori om gruppeutvikling, \emph{forming, storming,
+norming} og \emph{performing}, selv om tildels har hoppet helt over
+\emph{storming}-fasen. Dette har sin årsak i at vi er rimelig like i måten å
+håndtere konflikter og at vi ikke kverulerer unødvendig, men er heller
+løsningsorienterte og har fokus på fremdrift. At Tuckmans modell ikke passer
+helt i dagens grupper (det er en gammel teori fra 1965), passer godt med Endre
+Sjøvolds \cite{sjovold} påstander om at den er i ferd med å bli overflødig. Vi
+kjenner oss også godt igjen i Sjøvolds evaluering av EiT-grupper, som basert på
+Systematisere Person-Gruppe Relasjonen-modellen (SPGR) sier at utviklingen i en
+EiT-gruppe ikke er signifikant (se \cref{tab:sjovold}).
 
-\begin{itemize}
-\item[\textsc{Forming}]	
-\item[\textsc{Norming}]
-\item[\textsc{Storming}]
-\item[\textsc{Performing}]
+\begin{table}[ht!]
+\centering
+\begin{tabular}{l c c}
+& Pre & Post \\ \hline
+Kontroll & 3.15 & 3.00 \\
+Åpenhet & 4.71 & 4.61 \\
+Avhengighet & 5.54 & 5.48 \\
+Opposisjon & 1.50 & 1.36 \\
+Innesluttethet & 1.09 \\
+Synergi & 6.51 & 6.54 \\ \hline
+\end{tabular}
+\caption{Resultater fra Sjøvolds studie av EiT-grupper over ett semester, ser at
+det ikke er noen signifikant forandring før/etter.}
+\label{tab:sjovold}
+\end{table}
+
+Vi har likevel en kommentar til Sjøvolds konklusjon vedrørende kategorien
+\emph{åpenhet}. Selv om gruppa nok er like åpen nå ved slutten enn ved oppstart,
+er terskelen for å være åpen med andre gruppemedlemmer om problemer, kritikk
+o.l., lavere. Slik at eksponeringen over tid har gjort interaksjonen mellom
+medlemmene mer ukomplisert. Vi erkjenner likevel at rollene hver enkelt påtok
+seg ved starten, har forblitt tilnærmet uforandret gjennom semesteret.
