oppdaterte roller_igruppa

--- a/prosess/Roller_igruppa.tex
+++ b/prosess/Roller_igruppa.tex
@@ -1,23 +1,69 @@
 \section{Roller i gruppa}
 "Ein person blir ein leder når han eller hun blir satt i ein lederposisjon."
 
-I gruppekontrakten blei det bestemt at me skulle ha ein flatstruktur i gruppa. Valget var basert på at ingen egentlig ville gå inn i ein lederrolle, og at me ville ha ein større frihet til å formulere arbeidsoppgåvene sjølv. Me kom likevel opp i situsjoner som krevde at ein person tok ledelse for å sikre effektiviteten til gruppa. I praksis fekk gruppa ein situasjonsbetinget lederstruktur (ref.).
+I gruppekontrakten blei det bestemt at vi skulle ha en flat struktur i gruppa. 
+Valget var basert på at ingen egentlig ville gå inn i ein lederrolle, og at vi 
+ville ha ein større frihet til å formulere arbeidsoppgavene selv. 
+Vi kom likevel opp i situsjoner som krevde at noen tok ledelse for å sikre 
+effektiviteten til gruppa. I praksis fikk gruppa en situasjonsbetinget 
+lederstruktur (ref.).
 
-Den situasjonsbetinget lederskap strukturen førte og til at gruppemedlemmer tok rollen som leder i den fagdelen dei hadde mest autoritet på. Åsmund blei dermed ein uformell leder for fysikkdelen, Turid for numerikk delen og Knut for programeringsdelen i c++. Dei tok dermed ansvar for framgang og oppgåvedeling på desse områdene, og strukturerte samarbeidet mellom gruppemedlemmene på sitt respektive felt. 
+Den situasjonsbetingede lederskapstrukturen førte og til at gruppemedlemmer 
+tok rollen som leder i den fagdelen de hadde mest autoritet på. Åsmund ble dermed 
+en uformell leder for fysikkdelen, Turid for numerikk delen og Knut for programeringsdelen. 
+De tok dermed ansvar for fremgang og oppgavedeling på disse områdene, og strukturerte 
+samarbeidet mellom gruppemedlemmene på sitt respektive felt. 
 
-I vår gruppe såg me at Åsmunde i større grad gjekk inn i rolla som oppgåve-leder. Han tok ansvar for å settje opp eit system for å utveksle informasjon rundt prosjektet, github, og tok ofte intiativ ved å leggje ut relevante artikler på sida. Han gjekk dermed og inn i rolla som  samordneren (ref) på gruppa. Me merka oss og at han var meir aktiv i prosjektet i EIT, som er den delen som er mest oppgåvefokusert. 
+% Åsmund
+I vår gruppe så vi at Åsmund i større grad gjikk inn i rolla som oppgave-leder. 
+Han tok ansvar for å settje opp eit system for å utveksle informasjon rundt 
+prosjektet, github, og tok ofte intiativ ved å dele relevante artikler. 
+Han gikk dermed og inn i rolla som samordneren (ref) på gruppa. Vi merket oss 
+og at han var mer aktiv i prosjektetdelen av EIT, som er den delen som er mest 
+oppgavefokusert. 
 
-Bales staturer at medlemmer som er veldig oppgåvefokusert er mindre innvolvert i relasjonsretta aksjoner. Paul er den i gruppa som er mest oppgåvefokusert.På gruppa har han ein tendens til å ta ein faglig tilnærming, og liker å fokusere mest på oppgåva for hand. Han fell alstå oftere inn i rolla som diagnostiker (ref) og informasjonssøkjande (ref). Han er dermed ein styrke på gruppa ved at han held diskusjonene relevante, i tillegg til at han er eit pålitelig medlem når det gjeld å gjennomføre arbeid i tide. Me ser likevel ein tendens til at Paul er mindre involvert i relasjonsretta aksjoner på gruppa. 
+% Paul
+Bales statuerer at medlemmer som er veldig oppgavefokusert er mindre innvolvert 
+i relasjonsrettede aksjoner. Paul er den i gruppen som er mest oppgavefokusert. 
+På gruppa har han en tendens til å ta en faglig tilnærming, og liker å fokusere 
+mest på oppgava for hand. Han faller alstå oftere inn i rollen som diagnostiker 
+(ref) og informasjonssøkande (ref). Han er dermed ein styrke på gruppa ved at han 
+holder diskusjonene relevante, i tillegg til at han er eit pålitelig medlem når 
+det gjelder å gjennomføre arbeid i tide. Vi ser likevel en tendens til at Paul 
+er mindre involvert i relasjonsrettede aksjoner på gruppa.
 \\
 \\
-Den som oftas gjekk inn i rolla som sosial-emosionell leder var Turid. Ho var eit viktig ledd i gruppa i form av å uttrykke klare meininger og frustrasjoner over moment i gruppa som ikkje fungerte optimalt. Ho gjekk dermed inn i rolla som kritiker og kjensletolker (ref). Når det var ting som fungerte bra i gruppa kom ho og inn med støtte og oppmuntring til å fortsette på samme linje. Sjølv om ho var ein av dei som oftest var innvolvert i diskusjoner/konflikter, var ho og ofte den som løyste dei, enten gjennom forhandlinger eller ved å trekkje seg tilbake når ho gjekk for langt. Turid var og det medlemmet i gruppa som oftes tok initiativ og ledelse i prossessdelen av EIT, som fokuserer mest på relasjoner og samarbeid mellom medlemmer på gruppa. Her verka ho ofte som målvakt (ref), ved å igangsette runde rundt bordet og være oppmerksom på at alle kom til ordet.
+% Turid
+Den som oftest gikk inn i rollen som sosial-emosionell leder var Turid. Hun var et 
+viktig ledd i gruppa i form av å uttrykke klare meninger og frustrasjoner over 
+moment i gruppa som ikke fungerte optimalt. Hun gikk dermed inn i rolla som kritiker 
+og følelsestolker (ref). Når det var ting som fungerte bra i gruppa kom hun og inn 
+med støtte og oppmuntring til å fortsette på samme linje. Selv om hun var en av de 
+som oftest var innvolvert i diskusjoner/konflikter, var hun også ofte den som løste de, 
+enten gjennom forhandlinger eller ved å trekke seg tilbake når hun gikk for langt. 
+Turid var og det medlemmet i gruppa som oftest tok initiativ og ledelse i prossessdelen av EIT, 
+som fokuserer mest på relasjoner og samarbeid mellom medlemmene i gruppa. Her virker hun 
+ofte som målvakt (ref), ved å igangsette runde rundt bordet og være oppmerksom på at alle kom til ordet.
 Situasjon: Paul og Turid.
 \\
 \\
-Bale's statuerer og at sosial-emotionell aksjoner ofte blir igangsatt av medlemmer som er mindre involvert i oppgåveretta aksjoner. Dette ser me igjen i gruppa ved at Joakim var innvolvert fleire sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at prosjektet har havnet noko utenfor hans fagfelt. Han er dermed blitt mindre involvert i sjølve oppgåveløysninga. Derimot har han vore eit viktig tillegg i gruppa når det gjeld det sosiale samhaldet i gruppa. Han har vore den personen som i størst grad har bidratt til den lette tonen mellom medlemmene, og har tilrettelagt for at medlemmene i gruppa har blitt betre kjent. Dette har han gjort blant anna ved å alltid stille med ein positiv innstilling og involvere gruppa i diskusjoner som går på andre ting enn kun det faglige.
+Bale's statuerer og at sosial-emosjonelle aksjoner ofte blir igangsatt av medlemmer som er 
+mindre involvert i oppgaveretta aksjoner. Dette ser vi igjen i gruppa ved at Joakim var 
+innvolvert i flere sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at 
+prosjektet har havnet noe utenfor hans fagfelt. Han er dermed blitt mindre involvert i 
+sjelve oppgaveløsningen. Derimot har han vært et viktig tillegg i gruppa når det gjelder 
+det sosiale samholdet i gruppa. Han har vært den personen som i størst grad har bidratt 
+til den lette tonen mellom medlemmene, og har tilrettelagt for at medlemmene i gruppa har 
+blitt bedre kjent. Dette har han gjort blant annet ved å alltid stille med en positiv 
+innstilling og involvere gruppa i diskusjoner som går på andre ting enn kun det faglige.
 \\
 \\
-Det bur ein liten kritikker i samtlige medlemmer på gruppa. Me ser likevel at Knut har tatt på seg denne rolla i gruppa i større grad enn andre. Kritikkaren er viktig i gruppesamanheng ved «systematisk, åpen, støttande og kritisk gransking av sitt og andres bidrag til gruppearbeidet.»
-Dette gjøres på ein måte slik at medlemmer på gruppa ikkje opplever kritikken som ein trussel, og dermed beholder fokuset på oppgåveløysning. (Innlegg frå andre).
+Det bor en liten kritiker i samtlige medlemmer på gruppa. Vi ser likevel at Knut har tatt 
+på seg denne rollen i gruppa i større grad enn andre. Kritikeren er viktig i gruppesamanheng 
+ved «systematisk, åpen, støttande og kritisk gransking av sitt og andres bidrag til gruppearbeidet.»
+Dette gjøres på en måte slik at medlemmer på gruppen ikke opplever kritikken som en trussel, 
+og dermed beholder fokuset på oppgaveløsing. Knut tar også på seg rollen som meningssøkeren, 
+ved at han oppfordrer til at gruppemedlemmene skal få sagt sin mening slik at en beslutning
+kan tas.
 
 ref // (1) Handbok for gruppearbeidet
