Fikset tabell i avsnitt om Wheelan

--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -78,7 +78,7 @@ det en god pekepinn på punkter som bør være i samarbeidskontrakten.
 6. & Kombiner støtte og granskning \\
 7. & Utform fremgangsplaner og tilbakemeldingsmåter i plenum. \\
 8. & Etabler metode for å ta opp ``ikke-tema''. \\
-9. & Bruk et beslutningsmønster som sørger for nødvendig engasjement. \\
+9. & Bruk et beslutningsmønster som sørger for nødvendig engasjement.
 \end{tabular}
 \caption{Schwarz' regler for effektive grupper}
 \label{tab:grunnregler}
@@ -144,13 +144,17 @@ Wheeland beskriver gruppemedlemmer's oppførsel og holdninger i effektive gruppe
 \begin{center}
 \begin{table}[ht!]
 \begin{tabular}{r l}
-1. & Ikke skyld på andre for gruppas problemer
-2. & Vær engasjert når gruppa setter mål, roller og avklaring av oppgaver
-3. & Vær for en åpen kommunikasjonsstruktur der alle medlemmer deltar og blir hørt 
-4. & Ha en riktig fordeling mellom diskusjon av oppgaven og støttende kommunikasjon
-5. & Bruk en effektiv måte å løse oppgaver på, og en effektiv måte å ta avgjørelser
-6. & Lage normer som støtter produktivitet, innovasjon og frihet til å uttale seg
-7. & Bidra med normer som forfremmer produktivitet
+1. & Ikke skyld på andre for gruppas problemer \\
+2. & Vær engasjert når gruppa setter mål, roller og avklaring av oppgaver \\
+3. & Vær for en åpen kommunikasjonsstruktur der alle medlemmer deltar og blir
+hørt \\
+4. & Ha en riktig fordeling mellom diskusjon av oppgaven og støttende
+kommunikasjon \\
+5. & Bruk en effektiv måte å løse oppgaver på, og en effektiv måte å ta
+avgjørelser \\
+6. & Lage normer som støtter produktivitet, innovasjon og frihet til å uttale
+seg \\
+7. & Bidra med normer som forfremmer produktivitet \\
 8. & Forfremme gruppearbeid
 \end{tabular}
 \caption{Wheelans retningslinjer for effektivt gruppearbeid}
