--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -136,7 +136,7 @@ Bruken av github har imidlertid ikke bare hatt negative konsekvenser, det har bl
 ført til at føring av timer utenfor avsatt kjernetid har skjedd automatisk. Et
 plott av tidsbruk for hele gruppa vises i \cref{fig:punchcard}, der abcissen
 viser klokkeslett og ordinaten viser ukedager.
-\begin{figure}[h!]
+\begin{figure}[ht!]
   \begin{center}
     \includegraphics[width=\textwidth]{punchcard.png}
   \end{center}
@@ -238,7 +238,14 @@ ved «systematisk, åpen, støttende og kritisk gransking av sitt og andres bidr
 Dette gjøres på en slik måte at medlemmer på gruppa ikke opplever kritikken som en trussel, 
 og dermed beholder fokuset på oppgaveløsning. (Innlegg frå andre).\\
 
-I figur \ref{Plot av egenskaper til medlemmer på gruppen} har vi brukt den eine prosessøvelsen til 
+\begin{figure}[ht!]
+\centering
+\includegraphics[scale=0.4]{teammedlem.pdf}
+\caption{Plot av egenskaper til medlemmer på gruppen}
+\label{fig:medlemmer}
+\end{figure}
+
+I \cref{fig:medlemmer} har vi brukt den ene prosessøvelsen til 
 lage eit plot over egenskepene til gruppemedlemmene. Me ser at dei personlege egenskapene reflekteres 
 igjen i dei rollene gruppemedlemmer har tatt på gruppen. Som gruppas kritikker ser me at Knut skårer 
 høgt på punktet; setter spørsmålsteikn ved teamets avgjørelser. Han skårer og høgere på punktet; trekker
@@ -258,13 +265,6 @@ tilbakeholden i teamet.
 
 ref // (1) Handbok for gruppearbeidet\\
 %bruk \cite{svenskeboka} - Åsmund
-
-\begin{figure}[h]
-\centering
-\includegraphics[scale=0.4]{teammedlem.pdf}
-\caption{}
-\label{Plot av egenskaper til medlemmer på gruppen}
-\end{figure}
 
 \section{Tilbakeblikk}
 \label{sec:tilbakeblikk}
@@ -289,7 +289,7 @@ Kontroll & 3.15 & 3.00 \\
 Åpenhet & 4.71 & 4.61 \\
 Avhengighet & 5.54 & 5.48 \\
 Opposisjon & 1.50 & 1.36 \\
-Innesluttethet & 1.09 \\
+Innesluttethet & 1.20 & 1.09 \\
 Synergi & 6.51 & 6.54 \\ \hline
 \end{tabular}
 \caption{Resultater fra Sjøvolds studie av EiT-grupper over ett semester, ser at
