tilleg til prosess/oppstart-og utvikling

--- a/prosess/Roller_igruppa.tex
+++ b/prosess/Roller_igruppa.tex
@@ -60,7 +60,7 @@ innstilling og involvere gruppa i diskusjoner som går på andre ting enn kun de
 \\
 Det bor en liten kritiker i samtlige medlemmer på gruppa. Vi ser likevel at Knut har tatt 
 på seg denne rollen i gruppa i større grad enn andre. Kritikeren er viktig i gruppesamanheng 
-ved «systematisk, åpen, støttande og kritisk gransking av sitt og andres bidrag til gruppearbeidet.»
+ved «systematisk, åpen, støttende og kritisk gransking av sitt og andres bidrag til gruppearbeidet.»
 Dette gjøres på en måte slik at medlemmer på gruppen ikke opplever kritikken som en trussel, 
 og dermed beholder fokuset på oppgaveløsing. Knut tar også på seg rollen som meningssøkeren, 
 ved at han oppfordrer til at gruppemedlemmene skal få sagt sin mening slik at en beslutning
