--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -236,25 +236,12 @@ Det bor en liten kritiker i samtlige medlemmer på gruppen. Vi ser likevel at Kn
 seg denne rollen i gruppen i større grad enn andre. Kritikeren er viktig i gruppesammenheng 
 ved «systematisk, åpen, støttende og kritisk gransking av sitt og andres bidrag til gruppearbeidet.»
 Dette gjøres på en slik måte at medlemmer på gruppa ikke opplever kritikken som en trussel, 
-og dermed beholder fokuset på oppgaveløsning. (Innlegg frå andre).\\
+og dermed beholder fokuset på oppgaveløsning. Knut tar også på seg rollen som meningssøkeren, 
+ved at han oppfordrer til at gruppemedlemmene skal få sagt sin mening slik at en beslutning
+kan tas.\\
 
-I figur \ref{Plot av egenskaper til medlemmer på gruppen} har vi brukt den eine prosessøvelsen til 
-lage eit plot over egenskepene til gruppemedlemmene. Me ser at dei personlege egenskapene reflekteres 
-igjen i dei rollene gruppemedlemmer har tatt på gruppen. Som gruppas kritikker ser me at Knut skårer 
-høgt på punktet; setter spørsmålsteikn ved teamets avgjørelser. Han skårer og høgere på punktet; trekker
-seg ut av teamet; som igjen kan trekkes tilbake til at han har ein lederposisjon ved implimentering av
-programmet, som er noe sjølvstendig arbeid. Joakim skiller seg mest fra gruppen på punktet; Bidrar til at teamet 
-sporer av. Det kan relateres tilbake til Joakims rolle som energigiver. Den beste måten å lade opp att
-for videre jobbing av prosjekt er ofte ved å få litt avspredele frå sjølve oppgåvejobbinga.
-Åsmund skårer høgt på punkta; tar initiativ og søker info og opplysninger. Dette kan relateres tilbake 
-til lederrollen Åsmund har tatt for fysikkdelen avprosjektet som er veldig teoretisk. (Når ein prøver å 
-modellere ein prosess realistisk kan modellen raskt bli komplisert. Det er da viktig  at me har nok 
-informasjon til å kunne gjøre forenklinger som fremdeles resulterer i eit realistisk modell).
-Turid er den som skårer høyset på punkta; dominerer og koordinerer, samordner, søker enighet, som igjen kan
-relateres tilbake til den rollen hun har hatt som sosial-emosjonell leder. Ellers legg me merke til at gruppa
-generelt er flinke til å ta initiativ, søkje info/opplysninger og gi uttrykk for sine meininger. Paul er den 
-i teamet som er mest oppgåvefokusert, og me ser ein tendens i modellen til at han skårer noko høgare på 
-tilbakeholden i teamet.
+I figur \ref{Plot av egenskaper til medlemmer på gruppen} har vi brukt den ene prosessøvelsen til 
+lage et plot over egenskapene til gruppemedlemmene. Vi ser at de personlege egenskapene er reflektert i de rollene gruppemedlemmer har tatt på gruppen. Som gruppas kritiker ser vi at Knut skårer høgt på punktet; setter spørsmålstegn ved teamets avgjørelser. Han skårer og høyere på punktet; trekker seg ut av teamet; som igjen kan trekkes tilbake til at han har en lederposisjon ved implementering av programmet, et noe selvstendig arbeid. Joakim skiller seg mest fra gruppen på punktet; Bidrar til at teamet sporer av. Det kan relateres tilbake til Joakim's rolle som energigiver. Den beste måten å lade opp att for videre jobbing av prosjekt er ofte ved å få litt atspredelse fra selve oppgavejobbingen. Åsmund skårer høyt på punkta; tar initiativ og søker info og opplysninger. Dette kan relateres tilbake til lederrollen Åsmund har tatt for fysikkdelen av prosjektet, som er veldig teoretisk. (Når en prøver å modellere en prosess realistisk kan modellen raskt bli komplisert. Det er da viktig at vi har nok informasjon til å kunne gjøre forenklinger som fremdeles resulterer i et realistisk modell). Turid er den som skårer høyest på punktet; dominerer og koordinerer, samordner, søker enighet, som igjen kan relateres tilbake til den rollen hun har hatt som sosial-emosjonell leder. Ellers legg vi merke til at gruppa generelt er flinke til å ta initiativ, søke info/opplysninger og gi uttrykk for sine meininger. Paul er den i teamet som er mest oppgavefokusert, og vi ser en tendens i modellen til at han skårer noe høyere på punktet tilbakeholden i teamet.
 
 ref // (1) Handbok for gruppearbeidet\\
 %bruk \cite{svenskeboka} - Åsmund
