--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -40,8 +40,8 @@ av et utdrag av loggen på github, \cref{fig:github}.
 \end{figure}
 Her ser man hvordan de forskjellige medlemmene både har arbeidet på forskjellige
 deler av prosjektet, og hvordan man har samarbeidet og gitt feedback på
-hverandre: først har Joakim endret ``analyse.tex'', og så har Åsmund kommet med
-kommentarer på den samme filen. Så har Knut lastet opp en fil som har med
+hverandre: først har Åsmund kommentert noe i ``analyse.tex'', og så har Joakim kommet med
+endringer i den samme filen. Så har Knut lastet opp en fil som har med
 numerikk-delen å gjøre, noe som er typisk for at han arbeider mer separat fra
 resten. Så har Paul endret på rapporten, mens Turid har endret på
 presentasjonen. Det fremgår også fra den kompliserte trestrukturen at alle
