--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -93,7 +93,7 @@ fordi det var nødvendig å få til aksjoner for at gruppas mål skulle bli nåd
 presentert i \cref{avs:roller} hadde Turid en rolle som oppgaveleder. 
 
 \section{Opprinnelig plan}
-Gruppas opprinnelige plan 
+Gruppas opprinnelige plan var å modellere bacon i en mikrobølgeovn.  
 
 \section{Regler, avtaler, kontrakt}
 \label{sec:kontrakt}
