Mekka bra greier om Turid og Joakim sine roller

--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -219,18 +219,24 @@ var hun og ofte den som løste de, enten gjennom forhandlinger eller ved å trek
 når hun gikk for langt. Turid var og det medlemmet i gruppen som oftest tok initiativ og ledelse 
 i prosessdelen av EIT, som fokuserer mest på relasjoner og samarbeid mellom medlemmer på gruppen. 
 Her virket hun ofte som målvakt (ref), ved å igangsette runde rundt bordet og være oppmerksom på 
-at alle kom til ordet.
+at alle kom til ordet. Vi legger merke til at de situasjonene der Turid har
+lederrollen i gruppa gjør at hennes rolle implisitt ligner mer på en tradisjonelle lederrolle, der de
+andre har mer fagspesifikke lederroller. 
 Situasjon: Paul og Turid.\\
 
 Bale's statuerer og at sosial-emosjonelle aksjoner ofte blir igangsatt av medlemmer som er 
 mindre involverte i oppgaveretta aksjoner. Dette ser vi igjen i gruppen ved at Joakim var 
 involvert flere sosial-emosjonelle aksjoner. Denne situasjonen har oppstått ved at prosjektet 
-har havnet noe utenfor hans fagfelt. Han er dermed blitt mindre involvert i selve oppgaveløysingen. 
-Derimot har han vært et viktig tillegg i gruppen når det gjelder det sosiale samholdet. 
-Han har vært den personen som i størst grad har bidratt til den lette tonen mellom medlemmene, 
-og har tilrettelagt for at medlemmene i gruppen har blitt bedre kjent. Dette har han gjort 
-blant annet ved å alltid stille med en positiv innstilling og involvere gruppen i diskusjoner 
-som går på andre ting enn kun det faglige.\\
+er noe utenfor hans fagfelt, og han er dermed blitt mindre involvert i selve oppgaveløysingen. 
+Joakim har delvis valgt dette bevisst ved en landsby der hans fagkompetanse ikke
+står sterkest. Da hans rolle blir mindre faglig, kommer han naturlig inn i en
+rolle som er mer i retning av en fasilitator for godt gruppemiljø. At ett av
+gruppemedlemmene har hatt en slik rolle, i tillegg til å bidra faglig, har
+utvilsomt gjort at gruppa har hatt høy ytelse når vi jobber, og heller tar
+naturlige pauser med god stemning og humor nå medlemmene er slitne. Dette har
+nok også hatt en effekt på at medlemmene i gruppa ble fort kjent med hverandre.
+Joakim har utfylt denne rollen blant annet ved å alltid stille med en positiv innstilling og 
+å involvere gruppen i diskusjoner som går på andre ting enn kun det faglige.\\
 
 Det bor en liten kritiker i samtlige medlemmer på gruppen. Vi ser likevel at Knut har tatt på 
 seg denne rollen i gruppen i større grad enn andre. Kritikeren er viktig i gruppesammenheng 
