Skrev utkast Opprinnelig plan

--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -93,7 +93,23 @@ fordi det var nødvendig å få til aksjoner for at gruppas mål skulle bli nåd
 presentert i \cref{avs:roller} hadde Turid en rolle som oppgaveleder. 
 
 \section{Opprinnelig plan}
-Gruppas opprinnelige plan var å modellere bacon i en mikrobølgeovn.  
+Gruppas opprinnelige plan var å løse varmelikningene og transportlikningen for
+bacon. Når dette var avgjort trengtes en mer detaljert plan. Den første
+diskusjonen som oppstod var om vi skulle bruke en eksplisitt eller implisitt
+numerisk metode. Knut, som har hovedansvaret for implementasjon, ville gjerne
+bruke en metode som han visste enkelt kunne implementeres. Matematikerne ville
+på den andre siden bruke en mer avansert modell, som var vanskeligere å ta i
+bruk. Dette ble diskutert over en lengre periode, med innspill fra landsbyleder
+om at det var bedre å satse på et ambisiøst prosjekt. Til slutt ble også Knut
+overbevist om å bruke en implisitt metode, slik at de ble konsensus i gruppa. I
+ettertid ser vi at dette medførte en mye større arbeidsoppgave for Knut, men han
+har gått løs på oppgaven med godt mot. 
+
+Når denne hindringen var overkommet satte vi ned en liste med prioriterte mål
+som skulle oppnås, og noen mål som kunne vurderes dersom de første målene var
+nådd. Prioriteringen av mål var det liten splid rundt, og hele denne prosessen
+gikk nokså effektivt, delvis fordi medlemmene var innstilte på å ha en plan slik
+det står i samarbeidskontrakten.
 
 \section{Regler, avtaler, kontrakt}
 \label{sec:kontrakt}
